# LearnOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.h  Common.h  README.md
Light/: blin_phong.cpp  gouraud.cpp  phong.cpp  phonn.cpp
Shader/: blend.fs  blend.vs  blin_phong.fs  blin_phong.vs  frame.fs  frame.vs  gouraud.fs  gouraud.vs  lambert.fs  model.fs  model.vs  phong.fs  phong.vs  phonn.fs  phonn.vs  scr_frame.fs  scr_frame.vs
mesh/: load_mesh.cc  mesh.cc  mesh.h  model.cc  model.h
opengl/: blend.cpp  frame.cpp
